--- a/Test_github_transfer_(use_this).ipynb
+++ b/Test_github_transfer_(use_this).ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# THIS is a test! -> Lets put this in the main branch! -> 💥"
+        "# Introduction"
       ],
       "metadata": {
         "id": "J0G-fOwLvrx9"
