--- a/Test_github_transfer_(use_this).ipynb
+++ b/Test_github_transfer_(use_this).ipynb
@@ -65,16 +65,18 @@
       "source": [
         "print(\"pizza men\")\n",
         "\n",
-        "print(\"🏷\", \"🔖\")\n"
+        "print(\"🏷\", \"🔖\", \"⚠\")\n",
+        "\n",
+        "# print(s) will not work, s is not a variable, or s is not a string!"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ndaJDRH4vvVm",
-        "outputId": "90169252-faf1-437b-d77d-d34b83884a61"
+        "outputId": "e8b6841a-4cc0-4cf3-ed57-325ebcbee47d"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1048,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Here is the plot if you can not see it!\n",
+        "### ⚠ Here is the plot if you can not see it!\n",
         "\n"
       ],
       "metadata": {
