--- a/Test_github_transfer_(use_this).ipynb
+++ b/Test_github_transfer_(use_this).ipynb
@@ -1048,7 +1048,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ⚠ Here is the plot if you can not see it!\n",
+        "### ⚠ 🏷 Here is the plot if you can not see it!\n",
         "\n"
       ],
       "metadata": {
